--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Aviation Oversight Atlas
-description: Country-by-country directory of aviation safety oversight authorities
+description: Directory of aviation safety oversight authorities
 theme: jekyll-theme-leap-day
 
 plugins:
